force-app/main/default/objects/My_System_Data__c/My_System_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>My System Data</label>
</CustomObject>