force-app/main/default/objects/My_System_Data__c/fields/AccessKey__c.field-meta.xml
<CustomField>
    <fullName>AccessKey__c</fullName>
    <label>AccessKey</label>
    <length>150</length>
    <type>Text</type>
</CustomField>