force-app/main/default/objects/My_System_Data__c/fields/SAPID__c.field-meta.xml
<CustomField>
    <fullName>SAPID__c</fullName>
    <label>SAPID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>