force-app/main/default/objects/My_System_Data__c/fields/twitterKey__c.field-meta.xml
<CustomField>
    <fullName>twitterKey__c</fullName>
    <label>twitterKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>